tests/miniJava/neg/002851_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = return new int [ 0 ] ; } }
